--- a/app/src/main/res/layout/dialog_askforusername.xml
+++ b/app/src/main/res/layout/dialog_askforusername.xml
@@ -12,9 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="15dp"
         android:hint="@string/username_hint"
         android:inputType="textPersonName" />
 
