--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -8,6 +8,16 @@
     android:layout_alignParentTop="true"
     android:id="@+id/calendar_constrainLayout_main">
 
+    <RelativeLayout
+        android:id="@+id/fragmentCalendar_relativeLayout_helper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/cLayoutCalendar_helper"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/calendarCvCalendar"
         android:layout_width="0dp"
@@ -152,4 +162,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarTvDay"  />
+    </android.support.constraint.ConstraintLayout>
 </android.support.constraint.ConstraintLayout>
