--- a/app/src/main/res/layout/dialog_savingsucessfull.xml
+++ b/app/src/main/res/layout/dialog_savingsucessfull.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout2"
     android:layout_width="wrap_content"
-    android:layout_height="150dp"
+    android:layout_height="200dp"
     android:orientation="vertical"
     tools:context=".TabActivity">
 
@@ -17,7 +17,7 @@
         <TextView
             android:id="@+id/savingSuccessful_textView"
             android:layout_width="wrap_content"
-            android:layout_height="53dp"
+            android:layout_height="84dp"
             android:padding="5dp"
             android:paddingTop="5dp"
             android:text="@string/event_saving_successful"
@@ -28,17 +28,17 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="144dp"
+        android:layout_height="125dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="2dp">
+        android:layout_marginBottom="0dp">
 
         <TableRow
             android:layout_width="277dp"
-            android:layout_height="74dp"
+            android:layout_height="102dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="14dp"
+            android:layout_marginBottom="0dp"
             android:padding="2dp"
             android:paddingLeft="2dp"
             android:paddingRight="5dp"
