--- a/app/src/main/res/layout/fragment_qrgenerator.xml
+++ b/app/src/main/res/layout/fragment_qrgenerator.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground"
-    tools:context=".view.QRSharingFragment">
+    tools:context=".view.QRGeneratorFragment">
 
     <RelativeLayout
         android:id="@+id/qrGenerator_relativeLayout_textViewFrame"
