--- a/app/src/main/res/layout/dialog_afterscanning.xml
+++ b/app/src/main/res/layout/dialog_afterscanning.xml
@@ -11,67 +11,89 @@
     <RelativeLayout
         android:id="@+id/dialog_qrScanner_relativeLayout_TextFrame"
         android:layout_width="382dp"
-        android:layout_height="290dp"
+        android:layout_height="309dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
         <TextView
             android:id="@+id/dialog_qrScanner_textView_headline"
             android:layout_width="match_parent"
-            android:layout_height="73dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/zentea_darkgreen"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/dialog_qrScanner_textView_description"
             android:layout_width="match_parent"
-            android:layout_height="216dp"
-            android:layout_alignParentBottom="true"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
+            android:layout_below="@+id/dialog_qrScanner_textView_headline"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:textSize="18sp"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="78dp" />
+
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/dialog_qrScanner_relativLayout_buttonFrame"
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="258dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="109dp"
         tools:layout_editor_absoluteX="37dp"
         tools:layout_editor_absoluteY="301dp">
 
         <Button
             android:id="@+id/dialog_qrScanner_button_eventRecject"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_alignParentBottom="true"
+            android:layout_below="@id/dialog_qrScanner_button_eventSaveOnly"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="70dp"
+
+            android:backgroundTint="@color/zentea_darkgreen"
+            android:drawableEnd="@drawable/ic_mydate_rejected_white"
             android:text="@string/eventReject"
+            android:textColor="@color/zentea_white"
             android:visibility="visible"
             tools:layout_editor_absoluteX="83dp"
             tools:layout_editor_absoluteY="119dp" />
 
         <Button
             android:id="@+id/dialog_qrScanner_button_eventSave"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="17dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:backgroundTint="@color/zentea_darkgreen"
+            android:drawableEnd="@drawable/ic_mydate_approved_white"
             android:text="@string/eventSave"
+            android:textColor="@color/zentea_white"
             android:visibility="visible"
             tools:layout_editor_absoluteX="83dp"
             tools:layout_editor_absoluteY="7dp" />
 
         <Button
             android:id="@+id/dialog_qrScanner_button_eventSaveOnly"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/dialog_qrScanner_button_eventSave"
             android:layout_centerHorizontal="true"
+            android:backgroundTint="@color/zentea_darkgreen"
+            android:drawableEnd="@drawable/ic_mydate_questionmark_white"
             android:text="@string/eventSaveWithoutAssign"
+            android:textColor="@color/zentea_white"
             tools:layout_editor_absoluteX="28dp"
             tools:layout_editor_absoluteY="63dp" />
 
@@ -79,9 +101,9 @@
             android:id="@+id/dialog_qrScanner_button_about"
             android:layout_width="308dp"
             android:layout_height="141dp"
-            android:layout_alignTop="@+id/dialog_qrScanner_button_eventSave"
-            android:layout_centerHorizontal="true"
+            android:layout_centerInParent="true"
             android:text="@string/abort"
+            android:visibility="gone"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="16dp" />
 
@@ -91,6 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/back"
+            android:visibility="gone"
             tools:layout_editor_absoluteX="91dp"
             tools:layout_editor_absoluteY="63dp" />
     </RelativeLayout>
