--- a/app/src/main/res/layout/dialog_afterscanning.xml
+++ b/app/src/main/res/layout/dialog_afterscanning.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:id="@+id/dialog_qrScanner_relativeLayout_TextFrame"
         android:layout_width="382dp"
-        android:layout_height="309dp"
+        android:layout_height="258dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
@@ -45,44 +45,38 @@
     <RelativeLayout
         android:id="@+id/dialog_qrScanner_relativLayout_buttonFrame"
         android:layout_width="match_parent"
-        android:layout_height="258dp"
+        android:layout_height="310dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="109dp"
-        tools:layout_editor_absoluteX="37dp"
-        tools:layout_editor_absoluteY="301dp">
+
+        >
 
         <Button
             android:id="@+id/dialog_qrScanner_button_eventRecject"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:layout_alignParentBottom="true"
+
             android:layout_below="@id/dialog_qrScanner_button_eventSaveOnly"
             android:layout_centerHorizontal="true"
+
 
             android:backgroundTint="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_rejected_white"
             android:text="@string/eventReject"
             android:textColor="@color/zentea_white"
-            android:visibility="visible"
-            tools:layout_editor_absoluteX="83dp"
-            tools:layout_editor_absoluteY="119dp" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/dialog_qrScanner_button_eventSave"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:backgroundTint="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_approved_white"
             android:text="@string/eventSave"
             android:textColor="@color/zentea_white"
-            android:visibility="visible"
-            tools:layout_editor_absoluteX="83dp"
-            tools:layout_editor_absoluteY="7dp" />
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/dialog_qrScanner_button_eventSaveOnly"
@@ -93,9 +87,7 @@
             android:backgroundTint="@color/zentea_darkgreen"
             android:drawableEnd="@drawable/ic_mydate_questionmark_white"
             android:text="@string/eventSaveWithoutAssign"
-            android:textColor="@color/zentea_white"
-            tools:layout_editor_absoluteX="28dp"
-            tools:layout_editor_absoluteY="63dp" />
+            android:textColor="@color/zentea_white" />
 
         <Button
             android:id="@+id/dialog_qrScanner_button_about"
@@ -103,9 +95,7 @@
             android:layout_height="141dp"
             android:layout_centerInParent="true"
             android:text="@string/abort"
-            android:visibility="gone"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="16dp" />
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/dialog_qrScanner_button_toCalender"
@@ -113,9 +103,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/back"
-            android:visibility="gone"
-            tools:layout_editor_absoluteX="91dp"
-            tools:layout_editor_absoluteY="63dp" />
+            android:visibility="gone" />
     </RelativeLayout>
 
 
