--- a/app/src/main/res/layout/dialog_afterscanningbuttonclick.xml
+++ b/app/src/main/res/layout/dialog_afterscanningbuttonclick.xml
@@ -13,31 +13,43 @@
         android:layout_height="216dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="89dp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="78dp" />
 
-    <Button
-        android:id="@+id/dialog_event_final_decission_accept"
-        android:layout_width="wrap_content"
+    <TableRow
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="84dp"
-        android:text="@string/accept"
-        android:visibility="visible"
-        tools:layout_editor_absoluteX="83dp"
-        tools:layout_editor_absoluteY="119dp" />
-
-    <Button
-        android:id="@+id/dialog_event_final_decission_reject"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="77dp"
-        android:layout_marginTop="64dp"
-        android:text="@string/reject"
-        android:visibility="visible"
-        tools:layout_editor_absoluteX="83dp"
-        tools:layout_editor_absoluteY="7dp" />
+        android:visibility="visible">
 
+        <Button
+            android:id="@+id/dialog_event_final_decission_accept"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+
+            android:layout_alignParentStart="true"
+            android:layout_weight="1"
+            android:backgroundTint="@color/zentea_darkgreen"
+            android:text="@string/accept"
+            android:textColor="@color/zentea_white"
+            android:visibility="visible"
+            tools:layout_editor_absoluteX="83dp"
+            tools:layout_editor_absoluteY="119dp" />
+
+        <Button
+            android:id="@+id/dialog_event_final_decission_reject"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_weight="1"
+            android:backgroundTint="@color/zentea_darkgreen"
+            android:text="@string/reject"
+            android:textColor="@color/zentea_white"
+            android:visibility="visible"
+            tools:layout_editor_absoluteX="83dp"
+            tools:layout_editor_absoluteY="7dp" />
+    </TableRow>
 </RelativeLayout>
