--- a/app/src/main/res/layout/dialog_afterscanningbuttonclick.xml
+++ b/app/src/main/res/layout/dialog_afterscanningbuttonclick.xml
@@ -21,8 +21,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="84dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="79dp"
+        android:layout_marginTop="126dp"
+        android:background="@color/zentea_darkgreen"
         android:text="@string/accept"
+        android:textColor="@color/zentea_white"
         android:visibility="visible"
         tools:layout_editor_absoluteX="83dp"
         tools:layout_editor_absoluteY="119dp" />
@@ -32,10 +36,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="77dp"
-        android:layout_marginTop="64dp"
+        android:layout_alignTop="@+id/dialog_event_final_decission_accept"
+        android:layout_marginEnd="108dp"
+        android:background="@color/zentea_darkgreen"
         android:text="@string/reject"
+        android:textColor="@android:color/background_light"
         android:visibility="visible"
         tools:layout_editor_absoluteX="83dp"
         tools:layout_editor_absoluteY="7dp" />
