--- a/app/src/main/res/layout/dialog_askforphonenumberandusername.xml
+++ b/app/src/main/res/layout/dialog_askforphonenumberandusername.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="300dp"
+    android:layout_height="250dp"
     android:orientation="vertical"
     tools:context=".TabActivity">
 
@@ -10,9 +10,10 @@
         android:id="@+id/dialog_afterScanner_editText_username"
         android:layout_width="305dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="142dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="26dp"
         android:hint="@string/username_hint"
         android:inputType="textPersonName" />
 
@@ -20,9 +21,9 @@
         android:id="@+id/dialog_afterScanner_editText_phoneNumber"
         android:layout_width="305dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="211dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/dialog_afterScanner_editText_username"
+        android:layout_marginLeft="30dp"
         android:hint="@string/phoneNumber_hint"
         android:inputType="phone" />
 
