--- a/app/src/main/res/layout/dialog_afterscanning.xml
+++ b/app/src/main/res/layout/dialog_afterscanning.xml
@@ -7,29 +7,33 @@
     android:orientation="vertical"
     tools:context=".TabActivity">
 
-
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="300dp">
     <RelativeLayout
+
         android:id="@+id/dialog_qrScanner_relativeLayout_TextFrame"
-        android:layout_width="382dp"
-        android:layout_height="258dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
         <TextView
             android:id="@+id/dialog_qrScanner_textView_headline"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:textColor="@color/zentea_darkgreen"
-            android:textSize="30sp" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/dialog_qrScanner_textView_description"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/dialog_qrScanner_textView_headline"
@@ -41,7 +45,7 @@
             tools:layout_editor_absoluteY="78dp" />
 
     </RelativeLayout>
-
+</ScrollView>
     <RelativeLayout
         android:id="@+id/dialog_qrScanner_relativLayout_buttonFrame"
         android:layout_width="match_parent"
