US0017: test documentation + unused imports deleted/code formatting

--- a/app/src/main/res/layout/activity_event_overview.xml
+++ b/app/src/main/res/layout/activity_event_overview.xml
@@ -7,9 +7,8 @@
     android:orientation="vertical">
 
     <FrameLayout
+        android:id="@+id/eventOverview_frameLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/eventOverview_frameLayout">
-    </FrameLayout>
+        android:layout_height="match_parent"></FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
