--- a/app/src/main/res/drawable/gradient_bg.xml
+++ b/app/src/main/res/drawable/gradient_bg.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#f1f1f2"
+        android:angle="270"
         android:centerColor="#e7e7e8"
         android:endColor="#cfcfcf"
-        android:angle="270" />
+        android:startColor="#f1f1f2" />
 </shape>
