--- a/app/src/main/res/layout/dialog_afterscanning.xml
+++ b/app/src/main/res/layout/dialog_afterscanning.xml
@@ -95,19 +95,23 @@
 
         <Button
             android:id="@+id/dialog_qrScanner_button_about"
-            android:layout_width="308dp"
-            android:layout_height="141dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:backgroundTint="@color/zentea_darkgreen"
             android:text="@string/abort"
-            android:visibility="gone" />
+            android:textColor="@color/zentea_white"
+            android:visibility="visible" />
 
         <Button
             android:id="@+id/dialog_qrScanner_button_toCalender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:backgroundTint="@color/zentea_darkgreen"
             android:text="@string/back"
-            android:visibility="gone" />
+            android:textColor="@color/zentea_white"
+            android:visibility="visible" />
     </RelativeLayout>
 
 
