--- a/app/src/main/res/layout/dialog_askforphonenumberandusername.xml
+++ b/app/src/main/res/layout/dialog_askforphonenumberandusername.xml
@@ -8,21 +8,21 @@
 
     <EditText
         android:id="@+id/dialog_afterScanner_editText_username"
-        android:layout_width="305dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="142dp"
+        android:layout_marginTop="60dp"
         android:hint="@string/username_hint"
         android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/dialog_afterScanner_editText_phoneNumber"
-        android:layout_width="305dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="211dp"
+        android:layout_below="@id/dialog_afterScanner_editText_username"
         android:hint="@string/phoneNumber_hint"
         android:inputType="phone" />
 
