--- a/app/src/main/res/layout/fragment_my_own_event_details.xml
+++ b/app/src/main/res/layout/fragment_my_own_event_details.xml
@@ -38,8 +38,8 @@
 
         <ScrollView
             android:id="@+id/scrollView2"
-            android:layout_width="192dp"
-            android:layout_height="172dp"
+            android:layout_width="321dp"
+            android:layout_height="244dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -67,32 +67,38 @@
 
         <Button
             android:id="@+id/myOwnEventDetailsButtonShowQR"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="345dp"
+            android:layout_height="50dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="88dp"
+            android:background="@color/zentea_darkgreen"
             android:text="@string/savingSuccessful_qrcode"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
         <Button
             android:id="@+id/myOwnEventDetailsButtonShowAcceptances"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="120dp"
+            android:layout_width="345dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="24dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:background="@color/zentea_darkgreen"
             android:text="@string/show_Response"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintHorizontal_bias="0.521"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/myOwnEventDetailsButtonShowQR"
-            app:layout_constraintVertical_bias="0.152" />
+            app:layout_constraintVertical_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
 
