--- a/app/src/main/res/layout/fragment_saved_event_details.xml
+++ b/app/src/main/res/layout/fragment_saved_event_details.xml
@@ -21,7 +21,7 @@
         <TextView
             android:id="@+id/savedEventappointmentIsFromText"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -66,17 +66,67 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.126" />
 
+        <Button
+            android:id="@+id/savedEventDetailsButtonAcceptAppointment"
+            android:layout_width="346dp"
+            android:layout_height="44dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="60dp"
+            android:background="@color/zentea_darkgreen"
+            android:text="@string/acceptAppointment"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+
+        <Button
+            android:id="@+id/savedEventDetailsButtonRefuseAppointment"
+            android:layout_width="346dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/zentea_darkgreen"
+            android:text="@string/refuseAppointment"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/savedEventDetailsButtonShowQr"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/savedEventDetailsButtonAcceptAppointment"
+            app:layout_constraintVertical_bias="0.875" />
+
+        <Button
+            android:id="@+id/savedEventDetailsButtonShowQr"
+            android:layout_width="346dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="36dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@color/zentea_darkgreen"
+            android:text="@string/savingSuccessful_qrcode"
+            android:textColor="@android:color/background_light"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <ScrollView
             android:id="@+id/scrollView2"
-            android:layout_width="192dp"
-            android:layout_height="113dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="347dp"
+            android:layout_height="222dp"
+            android:layout_marginBottom="5dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/rect_listview_frame"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.505"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.272">
@@ -94,44 +144,6 @@
                     android:text="Am bla findet bla termin statt mit bla details in dem zimmer etc pipapo" />
             </LinearLayout>
         </ScrollView>
-
-        <Button
-            android:id="@+id/savedEventDetailsButtonAcceptAppointment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
-            android:text="@string/acceptAppointment"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
-
-        <Button
-            android:id="@+id/savedEventDetailsButtonRefuseAppointment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/refuseAppointment"
-            app:layout_constraintBottom_toTopOf="@+id/savedEventDetailsButtonShowQr"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/savedEventDetailsButtonAcceptAppointment" />
-
-        <Button
-            android:id="@+id/savedEventDetailsButtonShowQr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="96dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:text="@string/savingSuccessful_qrcode"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
