--- a/app/src/main/res/layout/fragment_accepted_event_details.xml
+++ b/app/src/main/res/layout/fragment_accepted_event_details.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:windowBackground"
-    tools:context=".view.AcceptedEventDetailsFragment">
+    tools:context=".view.AcceptedEventDetailsFragment"
+    android:id="@+id/acceptedEvent_relativeLayout_main">
 
 
     <RelativeLayout
