--- a/app/src/main/res/layout/dialog_askingforphonenumber.xml
+++ b/app/src/main/res/layout/dialog_askingforphonenumber.xml
@@ -13,10 +13,13 @@
         android:layout_width="305dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="114dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"
+        android:layout_below="@id/dialog_textView_telephoneNumber"
         android:focusable="true"
+        android:hint="@string/phoneNumber_hint"
         android:focusableInTouchMode="true"
         android:inputType="phone">
 
@@ -30,6 +33,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="25dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:text="@string/telephonenumerNotRead" />
 
 </RelativeLayout>
