fragment adjusted symbols

--- a/app/src/main/res/layout/fragment_saved_event_details.xml
+++ b/app/src/main/res/layout/fragment_saved_event_details.xml
@@ -75,6 +75,7 @@
             android:layout_marginTop="60dp"
             android:background="@color/zentea_darkgreen"
             android:text="@string/acceptAppointment"
+            android:drawableEnd="@drawable/ic_mydate_approved_white"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,6 +92,7 @@
             android:layout_marginTop="8dp"
             android:background="@color/zentea_darkgreen"
             android:text="@string/refuseAppointment"
+            android:drawableEnd="@drawable/ic_mydate_rejected_white"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/savedEventDetailsButtonShowQr"
