--- a/app/src/main/res/layout/fragment_saved_event_details.xml
+++ b/app/src/main/res/layout/fragment_saved_event_details.xml
@@ -37,8 +37,8 @@
 
         <TextView
             android:id="@+id/savedEventDetailsOrganisatorText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="208dp"
+            android:layout_height="27dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="188dp"
             android:layout_marginStart="8dp"
@@ -46,14 +46,15 @@
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/savedEventappointmentIsFromText"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.06" />
 
         <TextView
             android:id="@+id/savedEventphNumberText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="165dp"
+            android:layout_height="26dp"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -61,10 +62,10 @@
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.067"
+            app:layout_constraintHorizontal_bias="0.103"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.126" />
+            app:layout_constraintVertical_bias="0.125" />
 
         <Button
             android:id="@+id/savedEventDetailsButtonAcceptAppointment"
@@ -72,10 +73,10 @@
             android:layout_height="44dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="124dp"
             android:background="@color/zentea_darkgreen"
-            android:text="@string/acceptAppointment"
             android:drawableEnd="@drawable/ic_mydate_approved_white"
+            android:text="@string/acceptAppointment"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,21 +92,21 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:background="@color/zentea_darkgreen"
-            android:text="@string/refuseAppointment"
             android:drawableEnd="@drawable/ic_mydate_rejected_white"
+            android:text="@string/refuseAppointment"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/savedEventDetailsButtonShowQr"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/savedEventDetailsButtonAcceptAppointment"
-            app:layout_constraintVertical_bias="0.875" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/savedEventDetailsButtonShowQr"
             android:layout_width="346dp"
-            android:layout_height="45dp"
-            android:layout_marginBottom="36dp"
+            android:layout_height="47dp"
+            android:layout_marginBottom="116dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:background="@color/zentea_darkgreen"
@@ -114,13 +115,12 @@
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent" />
 
         <ScrollView
             android:id="@+id/scrollView2"
-            android:layout_width="347dp"
-            android:layout_height="222dp"
+            android:layout_width="325dp"
+            android:layout_height="217dp"
             android:layout_marginBottom="5dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
@@ -128,10 +128,10 @@
             android:background="@drawable/rect_listview_frame"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.505"
+            app:layout_constraintHorizontal_bias="0.511"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.272">
+            app:layout_constraintVertical_bias="0.326">
 
             <LinearLayout
                 android:layout_width="match_parent"
