Changed My Date View to adapt to display size

--- a/app/src/main/res/layout/fragment_my_own_event_details.xml
+++ b/app/src/main/res/layout/fragment_my_own_event_details.xml
@@ -19,37 +19,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/myOwnEventyourAppointmentText"
-            android:layout_width="174dp"
-            android:layout_height="36dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text=""
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.128"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.015" />
-
 
         <ScrollView
             android:id="@+id/scrollView2"
-            android:layout_width="319dp"
-            android:layout_height="258dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="0dp"
+            android:layout_height="213dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="27dp"
             android:background="@drawable/rect_listview_frame"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingBottom="10dp"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
+            android:paddingTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.211">
+            app:layout_constraintTop_toBottomOf="@+id/myOwnEventyourAppointmentText">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -67,38 +53,60 @@
 
         <Button
             android:id="@+id/myOwnEventDetailsButtonShowQR"
-            android:layout_width="345dp"
-            android:layout_height="49dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="96dp"
+            android:layout_marginTop="50dp"
             android:background="@color/zentea_darkgreen"
             android:text="@string/savingSuccessful_qrcode"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/myOwnEventDetailsButtonShowAcceptances"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.521"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+            app:layout_constraintTop_toBottomOf="@+id/scrollView2"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <Button
             android:id="@+id/myOwnEventDetailsButtonShowAcceptances"
-            android:layout_width="345dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="24dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+
             android:background="@color/zentea_darkgreen"
             android:text="@string/show_Response"
             android:textColor="@android:color/background_light"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.521"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/myOwnEventDetailsButtonShowQR"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/myOwnEventDetailsButtonShowQR" />
+
+        <TextView
+            android:id="@+id/myOwnEventyourAppointmentText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="10dp"
+            android:paddingStart="8dp"
+            android:text=""
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.098"
+            app:layout_constraintVertical_chainStyle="spread_inside" />
 
     </android.support.constraint.ConstraintLayout>
 
