--- a/app/src/main/res/layout/dialog_askforphonenumberandusername.xml
+++ b/app/src/main/res/layout/dialog_askforphonenumberandusername.xml
@@ -12,11 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
         android:padding="5dp"
         android:paddingTop="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
         android:text="@string/titleDialogUsernamePhoneNumber"
         android:textAlignment="viewStart"
         android:textSize="16sp"
@@ -28,9 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="60dp"
         android:hint="@string/username_hint"
         android:inputType="textPersonName" />
 
@@ -38,12 +38,12 @@
         android:id="@+id/dialog_afterScanner_editText_phoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
         android:layout_below="@id/dialog_afterScanner_editText_username"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
         android:hint="@string/phoneNumber_hint"
-        android:inputType="phone"
-        android:layout_marginBottom="10dp"/>
+        android:inputType="phone" />
 
 </RelativeLayout>
